# getbar

./: LICENSE  README-de.md  README-eo.md  README-fr.md  README-it.md  README-ja.md  README-ko.md  README-th.md  README-vi.md  README-zh_CN.md  README-zh_TW.md  README.md  getbar.1.in  getbar.bash  gnuplot.rc.example  meson.build  meson_options.txt
debian/: changelog  control  copyright
man/de/: getbar.1.in
man/eo/: getbar.1.in
man/fr/: getbar.1.in
man/it/: getbar.1.in
man/ja/: getbar.1.in
man/ko/: getbar.1.in
man/th/: getbar.1.in
man/vi/: getbar.1.in
man/zh_CN/: getbar.1.in
man/zh_TW/: getbar.1.in
po/: POTFILES  de.po  eo.po  fr.po  getbar.pot  it.po  ja.po  ko.po  meson.build  th.po  vi.po  zh_CN.po  zh_TW.po
src/: getbar.c  lib.c
tests/: meson.build
